# magisterium-client

./: .aider.conf.yml  .gitignore  README.md  magisterium_client.py  pyproject.toml  requirements.txt  run_tests.py
docs/: CODING_STYLE_RULES.md  How_to_implement_safety_settings.md  How_to_request_related_questions.md  error_handling_documentation.md
tests/: __init__.py  test_integration.py  test_magisterium_client.py
